turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: ')' expected but ';' found.
		setCouleurSol(colors((i + 1) % colors.length);
                                                             ^LangtonsAnt:14: error: ')' expected but ';' found.
		setCouleurSol(colors((i + 1) % colors.length);
                                                             ^